[package]
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
edition = "2018"
readme = "README.md"
name = "blue-pill-test"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
hd44780-driver = "0.3.0"
[dependencies.stm32f1]
features = ["stm32f103", "rt"]
version = "0.8.0"

[dependencies.stm32f1xx-hal]
features = ["stm32f103", "rt"]
version = "0.3.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# this lets you use `cargo fix`!
[[bin]]
name = "blue-pill-test"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
